--- a/frontend/src/app/components/signup/signup.component.css
+++ b/frontend/src/app/components/signup/signup.component.css
@@ -112,8 +112,8 @@ input[type="password"],
 input[type="tel"] {
   width: 100%;
   padding: 14px 12px;
-  /* border: 1px solid rgba(255, 255, 255, 0.1); */
-  /* border-radius: 8px; */
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 8px;
   background: transparent;
   color: #ffffff;
   font-size: 14px;
